Conclusion of information about the correct or incorrect answer