@@ -23,7 +23,7 @@ public class MyBot extends TelegramLongPollingBot {
     public static final String USER_NAME = "les_edu_3o8o58o_bot";
 
 
-    public static final String TOKEN = System.getenv("SUPPORT_TOKEN");
+    public static final String TOKEN = System.getenv("TOKEN");
     private List<Question> questions;
     private final Map<Long, BotUser> USER_MAP;
     public static final long GROUP_ID = -1002457027813l;
@@ -48,7 +48,7 @@ public class MyBot extends TelegramLongPollingBot {
             if ("restart_test".equals(answer)) { // Проверяем, была ли нажата кнопка "Перезапустить тест"
                 botUser.reset();
                 questions = botUser.getNewQuestions(); // Получаем новые вопросы
-                sendMessageWithButtons(chatId, questions.getFirst().getNameQuestion(), questions.getFirst().getAnswers());
+                sendMessageWithButtons(chatId, questions.get(0).getNameQuestion(), questions.get(0).getAnswers());
                 return;
             }
 
@@ -58,6 +58,9 @@ public class MyBot extends TelegramLongPollingBot {
 
             if (rightAnswer.equals(answer)) {
                 botUser.setNumberOfRightQuestion(botUser.getNumberOfRightQuestion() + 1);
+                sendMassage(chatId, "правильный ответ!");
+            }else {
+                sendMassage(chatId, "это не тот ответ которого мы ожидали!");
             }
 
             botUser.setLastQuestion(botUser.getLastQuestion() + 1);
@@ -85,7 +88,7 @@ public class MyBot extends TelegramLongPollingBot {
 
                 sendMassage(chatId, "\nПривет " + message.getFrom().getFirstName() + "! Пройди тест по Java ");
                 questions = botUser.getNewQuestions();
-                sendMessageWithButtons(chatId, questions.getFirst().getNameQuestion(), questions.getFirst().getAnswers());
+                sendMessageWithButtons(chatId, questions.get(0).getNameQuestion(), questions.get(0).getAnswers());
             }
         }
     }
